--- a/templates/home.html
+++ b/templates/home.html
@@ -256,6 +256,10 @@
             closeBtn.onclick = function() {
               document.querySelector('.overlay').style.display = 'none';
               card.remove();
+              // Rendi visibile l'elemento con la classe 'userpage utentelog'
+              document.querySelector('.userpage.utentelog').style.display = 'block';
+               // Nascondi l'elemento con la classe 'sign'
+              document.querySelector('.sign').style.display = 'none';
             };
             card.appendChild(closeBtn);
         
