--- a/templates/home.html
+++ b/templates/home.html
@@ -48,13 +48,13 @@
 
     <div class="icon-container">
         <div class="icon" data-popup="popup1">
-            <img src="/static/images/search.svg" alt="">
+            <img src="/static/images/search.svg" class="icon-search">
         </div>
-        <div class="icon" data-popup="popup2">
-            <img src="/static/images/create.svg" alt="">
+        <div class="icon utentelog" data-popup="popup2">
+            <img src="/static/images/create.svg" class="icon-crea">
         </div>
-        <div class="icon" data-popup="popup3">
-            <img src="/static/images/rispondi.svg" alt="">
+        <div class="icon utentelog" data-popup="popup3">
+            <img src="/static/images/rispondi.svg" class="icon-risp">
         </div>
     </div>
 
@@ -79,9 +79,10 @@
                 <option value="Scienze politiche sociologia comunicazione">Scienze politiche sociologia comunicazione</option>
             </select>
         </div>
+        <span class="close-btn">&times;</span>
     </div>
     <div id="popup2" class="popup">
-        <div class="creaspot utentelog">
+        <div class="creaspot">
             <div class="spot">
                 <img src="/static/images/create.svg" class="createimg">
                 <input type="text" placeholder="Crea il tuo spot" class="input-spot">
@@ -91,6 +92,7 @@
             </span>
             <button class="btninvia">INVIA</button>
         </div>
+        <span class="close-btn">&times;</span>
     </div>
     <div id="popup3" class="popup">
         <div class="rispondi">
@@ -103,6 +105,7 @@
             <button class="btninvia">Invia</button>
             </div>
         </div>
+        <span class="close-btn">&times;</span>
     </div>
 
 
