--- a/static/stile homepage.css
+++ b/static/stile homepage.css
@@ -19,6 +19,17 @@ body,html {
   display: none; /* Inizialmente nascosta */
 }
 
+.overlay1{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: none;
+}
+
 
 
 .header {
@@ -144,13 +155,26 @@ body,html {
   transform: translate(-50%, -50%);
   width: 80%;
   padding: 20px;
-  background-color: white;
-  border: 1px solid #ccc;
+  background-color: #fff;
+  border: 3px;
+  border-radius: 3px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
 
-
+.close-btn {
+  position: absolute;
+  top: 10px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  color: #881c1c;
+  border: 3px;
+  border-radius: 100%;
+  cursor: pointer;
+}
 
 .bacheca {
   display: flex;
@@ -570,18 +594,36 @@ h1 {font-size: 16px;color: #881c1c;}
 
   .icon-container{
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 20px;
+    padding-top: 2%;
+    padding-bottom: 1%;
+    background-color: #881c1c;
   }
 
   .icon {
     width: 50px;
     height: 50px;
-    background-color: #ccc;
+    background-color: #f2f2f2;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    border: 3px;
     border-radius: 50%;
+  }
+
+  .icon-search{
+    width: 40%;
+  }
+
+  .icon-crea{
+    width: 50%;
+  }
+
+  .icon-risp{
+    width: 50%;
   }
 
   .popup {
@@ -592,19 +634,23 @@ h1 {font-size: 16px;color: #881c1c;}
       display: block;
   }
 
-
-
-
-
-
   .bacheca {
     display: flex;
-    height: calc(100vh - 48px); /* Altezza della finestra meno l'altezza del menu */
+    height: 100%;
+    padding-top: 0;
+  }
+
+  .riquadrospot{
+    align-items: center;
     padding-top: 0;
   }
 
   .container{
-    position: relative;
+    display: none;
+  }
+
+  .overlay1{
+    display: block;
   }
 
 }
@@ -613,5 +659,5 @@ h1 {font-size: 16px;color: #881c1c;}
 
 
 .utentelog{
-  display: ;
+  display: none;
 }
