--- a/templates/profilo.html
+++ b/templates/profilo.html
@@ -6,7 +6,7 @@
     <title>Profilo</title>
 </head>
 <body>
-    <h1>Profilo di INSERIRE NOME UTENTE LOGGATO</h1>
+    <h1>Profilo di {{ utente.nome }}, {{ utente.id }}</h1>
     
     <h2>I tuoi spot</h2>
     <div>
