--- a/templates/home.html
+++ b/templates/home.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <div id="popup1" class="popup">
+    <div id="popup1" class="popup popup-filtri">
         <div class="filtri">
             <img src="/static/images/search.svg" class="searchimg">
             <input type="text" placeholder="Cerca..." class="cercafiltro">
@@ -81,8 +81,7 @@
         </div>
         <span class="close-btn">&times;</span>
     </div>
-    <div id="popup2" class="popup">
-        <div class="creaspot">
+    <div id="popup2" class="popup popup-creaspot">
             <div class="spot">
                 <img src="/static/images/create.svg" class="createimg">
                 <input type="text" placeholder="Crea il tuo spot" class="input-spot">
@@ -91,11 +90,9 @@
                 <input type="checkbox">Anonimo
             </span>
             <button class="btninvia">INVIA</button>
-        </div>
         <span class="close-btn">&times;</span>
     </div>
-    <div id="popup3" class="popup">
-        <div class="rispondi">
+    <div id="popup3" class="popup popup-rispondi">
             <div class="risp">
                 <img src="/static/images/rispondi.svg" class="rispondiimg">
                 <p>Rispondi a nome utente</p>
@@ -104,7 +101,6 @@
             <input type="text" placeholder="Rispondi..." class="input-risp">
             <button class="btninvia">Invia</button>
             </div>
-        </div>
         <span class="close-btn">&times;</span>
     </div>
 
