--- a/templates/home.html
+++ b/templates/home.html
@@ -80,7 +80,7 @@
                 <option value="Scienze politiche sociologia comunicazione">Scienze politiche sociologia comunicazione</option>
             </select>
         </div>
-        <span class="close-btn">&times;</span>
+        <span class="closebtn">&times;</span>
     </div>
     <div id="popup2" class="popup popup-creaspot">
             <div class="spot">
@@ -91,7 +91,7 @@
                 <input type="checkbox">Anonimo
             </span>
             <button class="btninvia">INVIA</button>
-        <span class="close-btn">&times;</span>
+        <span class="closebtn">&times;</span>
     </div>
     <div id="popup3" class="popup popup-rispondi">
             <div class="risp">
@@ -104,7 +104,7 @@
                     <button type="submit" class="btninvia">Invia</button>
                 </form>
             </div>
-        <span class="close-btn">&times;</span>
+        <span class="closebtn">&times;</span>
     </div>
 
 
