--- a/static/stileDashboard.css
+++ b/static/stileDashboard.css
@@ -17,6 +17,7 @@ body,html {
   align-items: center;
   padding-top: 0.5%;
   padding-bottom: 0.5%;
+  margin-top: 0;
   background-color: #fff;
 }
 
