--- a/static/stile homepage.css
+++ b/static/stile homepage.css
@@ -421,19 +421,19 @@ h1 {font-size: 16px;color: #881c1c;}
 
 .logcard iframe {
   width: 100%;
-  height: calc(100% - 50px);
+  height: 100%;
   border: none;
   overflow: hidden;
 }
 
 .regcard {
-  border: 1px solid #ccc;
+  border: 1px solid white;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  width: 20%; 
+  width: 285px; 
   height: 60%; 
-  background: white;
+  background: whitesmoke;
   z-index: 1000;
   position: fixed;
   top: 50%;
@@ -445,7 +445,7 @@ h1 {font-size: 16px;color: #881c1c;}
 
 .regcard iframe {
   width: 100%;
-  height: calc(100% - 30px);
+  height: 100%;
   border: none;
   overflow: hidden;
 }
