--- a/static/stileDashboard.css
+++ b/static/stileDashboard.css
@@ -5,12 +5,13 @@ body,html {
   padding: 0;
   text-decoration: none;
   background-color: #f2f2f2;
+  height: 100%;
 }
 
 
 .header {
   display: flex;
-  position: fixed;
+  /* position: ; */
   width: 100%;
   border-bottom: 5px solid #e4e4e4;
   justify-content: space-around;
@@ -129,8 +130,41 @@ body,html {
 
 .container {
   display: flex;
-  height: calc(100vh - 64px);
-  margin-top: 54px;
+  height: calc(100vh - 54px);
+  /* margin-top: 54px; */
+}
+
+.scorrimento{
+  background-color: #881c1c;
+  display: none;
+}
+
+.marquee {
+  width: 80%;
+  overflow: hidden;
+  white-space: nowrap;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.marquee-content {
+  display: inline-block;
+  white-space: nowrap;
+  animation: marquee 30s linear infinite;
+}
+
+.item {
+  display: inline-block;
+  padding: 0 2rem;
+  font-size: 1.5rem;
+  background-color: #881c1c;
+  margin: 0 1rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+@keyframes marquee {
+  from { transform: translateX(100%); }
+  to { transform: translateX(-100%); }
 }
 
 .left-column {
@@ -204,7 +238,7 @@ body,html {
   border-radius: 5px;
   flex: 1;
   /* larghezza della div e margin proporzionale */
-  margin: 2.5% 5% 0% 5%;
+  margin: 2.5% 5% 2.5% 5%;
   /* height: 80%; */
 }
 
@@ -216,28 +250,30 @@ body,html {
 
 .box-domanda p {
   text-align: center;
-  border: 3px solid #e4e4e4;
+  border: 3px solid black;
   background-color: #e4e4e4;
   border-radius: 3px;
-  margin: 5% 5%;
-  padding: 0.5%;
+  /* margin: 5% 5%; */
+  /* padding: 0.5%; */
 }
 
 .domanda {
   height: 70%;
-  padding-bottom: 5%;
+  padding-bottom: 1%;
 }
 
 .img-argomento{
   text-align: center;
   /* display: none; */
   width: 100%;
+  border: solid 1px black;
 }
 
 .img-argomento img{
   align-items: center;
-  width: 20%;
-  margin-top: 5%;
+  width: 85%;
+  margin: 1%;
+  border: solid 1px black;
 }
 
 .box-risposta {
@@ -396,9 +432,61 @@ form{
 
   .container {
     display: flex;
+    flex-direction: column;
     height: calc(100vh - 52px);
     padding-top: 0;
     margin-top: 0;
   }  
+
+  .left-column {
+    background-color: #fff;
+    flex: 1;
+    border: 1px ;
+    overflow: auto;
+    display: none;
+  }
+
+  .right-column {
+    background-color: #881c1c;
+    border: 3px;
+    display: flex;
+    flex-direction: column;
+    flex: 2;
+  }
+
+  .scorrimento{
+    background-color: #881c1c;
+    display: block;
+  }
+  
+  .marquee {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    box-sizing: border-box;
+    position: relative;
+  }
+  
+  .marquee-content {
+    display: inline-block;
+    white-space: nowrap;
+    animation: marquee 30s linear infinite;
+  }
+  
+  .item {
+    display: inline-block;
+    padding: 4 2rem;
+    
+    font-size: 1.5rem;
+    background-color: #fff;
+    margin: 0 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+  }
+  
+  @keyframes marquee {
+    from { transform: translateX(100%); }
+    to { transform: translateX(-100%); }
+  }
  
 }
