--- a/templates/home.html
+++ b/templates/home.html
@@ -165,10 +165,10 @@
             <button class="btninvia">INVIA</button>
         </div>
 
-        <div class="rispondi">
+        <div class="rispondi utentelog">
             <div class="risp">
                 <img src="/static/images/rispondi.svg" class="rispondiimg">
-                <p>Rispondi a nome utente</p>
+                <p>Rispondi a uno spot</p>
             </div>
             <div class="risposta">
                 <form id="rispostaForm" action="/inserisci_risposta" method="POST">
