--- a/templates/profilo.html
+++ b/templates/profilo.html
@@ -52,7 +52,13 @@
         </div>
 
         <div class="right-column">
-            <h1>Profilo di {{ utente.nome }}, {{ utente.id }}</h1>
+            <h1>Profilo di {{ utente.nome }} {{ utente.cognome }}</h1>
+            <div class=" dati_personali">
+                <h5> Email: <div class="utente_email">{{utente.email}}</class></h5>
+                <h5>Ultima partita: {{utente.ultimaGiocata}}</h5>
+                <h5> Facoltà: {{utente.facolta.nome}}</h5>
+                <h5> Punti Facoltà: {{utente.facolta.puntiTot}}</h5>
+            </div>
         </div>
 
     </div>
